--- a/files/privacy.html
+++ b/files/privacy.html
@@ -53,7 +53,7 @@
   <h2>Contact Us</h2>
   <p>
     If you have any questions or suggestions about this Privacy Policy, please contact <strong>OKtm Websites</strong> at:  
-    <strong>your-email@example.com</strong>
+    <strong>mydoarweb@gmail.com</strong>
   </p>
 
   <p>Last updated: September 2025</p>
