--- a/hesh/index.html
+++ b/hesh/index.html
@@ -58,13 +58,30 @@
                     <!-- Seller Details -->
                     <fieldset class="p-4 border border-gray-200 rounded-lg">
                         <legend class="text-lg font-semibold px-2">הפרטים שלי</legend>
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-2">
-                             <input type="text" id="sellerName" placeholder="שם העסק" class="w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
-                             <input type="text" id="sellerAddress" placeholder="כתובת" class="w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
-                             <input type="text" id="sellerPhone" placeholder="טלפון" class="w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
-                             <input type="email" id="sellerEmail" placeholder="אימייל" class="w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
-                             <input type="text" id="sellerBusinessNumber" placeholder="מספר עוסק" class="w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
-                             <button type="button" id="save-seller-details-btn" class="md:col-span-2 bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-2 px-4 rounded-lg transition-colors text-sm">שמור את הפרטים שלי</button>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-x-4 gap-y-3 mt-2">
+                            <div>
+                                <label for="sellerName" class="block text-sm font-medium text-gray-700">שם העסק</label>
+                                <input type="text" id="sellerName" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
+                            </div>
+                            <div>
+                                <label for="sellerBusinessNumber" class="block text-sm font-medium text-gray-700">מספר עוסק</label>
+                                <input type="text" id="sellerBusinessNumber" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
+                            </div>
+                             <div class="md:col-span-2">
+                                <label for="sellerAddress" class="block text-sm font-medium text-gray-700">כתובת</label>
+                                <input type="text" id="sellerAddress" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
+                            </div>
+                            <div>
+                                <label for="sellerPhone" class="block text-sm font-medium text-gray-700">טלפון</label>
+                                <input type="text" id="sellerPhone" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
+                            </div>
+                            <div>
+                                <label for="sellerEmail" class="block text-sm font-medium text-gray-700">אימייל</label>
+                                <input type="email" id="sellerEmail" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 text-sm" required>
+                            </div>
+                            <div class="md:col-span-2">
+                                 <button type="button" id="save-seller-details-btn" class="w-full mt-2 bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-2 px-4 rounded-lg transition-colors text-sm">שמור את הפרטים שלי</button>
+                            </div>
                         </div>
                     </fieldset>
 
@@ -121,6 +138,7 @@
                                 <option>מזומן</option>
                                 <option>העברה בנקאית</option>
                                 <option>צ'ק</option>
+                                <option>ביט</option>
                                 <option>אחר</option>
                             </select>
                         </div>
@@ -193,15 +211,21 @@
 
             function saveSellerDetails() {
                 const sellerInfo = {
-                    name: document.getElementById('sellerName').value,
-                    address: document.getElementById('sellerAddress').value,
-                    phone: document.getElementById('sellerPhone').value,
-                    email: document.getElementById('sellerEmail').value,
-                    businessNumber: document.getElementById('sellerBusinessNumber').value
+                    name: document.getElementById('sellerName').value.trim(),
+                    address: document.getElementById('sellerAddress').value.trim(),
+                    phone: document.getElementById('sellerPhone').value.trim(),
+                    email: document.getElementById('sellerEmail').value.trim(),
+                    businessNumber: document.getElementById('sellerBusinessNumber').value.trim()
                 };
                 localStorage.setItem(SELLER_INFO_KEY, JSON.stringify(sellerInfo));
                 saveSellerDetailsBtn.textContent = 'הפרטים נשמרו!';
-                setTimeout(() => { saveSellerDetailsBtn.textContent = 'שמור את הפרטים שלי'; }, 2000);
+                saveSellerDetailsBtn.classList.remove('bg-gray-200', 'hover:bg-gray-300');
+                saveSellerDetailsBtn.classList.add('bg-green-500', 'text-white');
+                setTimeout(() => { 
+                    saveSellerDetailsBtn.textContent = 'שמור את הפרטים שלי';
+                    saveSellerDetailsBtn.classList.remove('bg-green-500', 'text-white');
+                    saveSellerDetailsBtn.classList.add('bg-gray-200', 'hover:bg-gray-300');
+                }, 2000);
             }
             
             saveSellerDetailsBtn.addEventListener('click', saveSellerDetails);
@@ -370,6 +394,8 @@
                     `<div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(-45deg); font-size: 8rem; color: rgba(255, 0, 0, 0.2); font-weight: bold; z-index: 1000; pointer-events: none; text-transform: uppercase;">מבוטל</div>` 
                     : '';
 
+                const clientAddressHtml = invoice.clientAddress ? `<p class="text-gray-600">${invoice.clientAddress}</p>` : '';
+
                 return `
                     <html lang="he" dir="rtl">
                     <head>
@@ -391,21 +417,21 @@
                             <header class="flex justify-between items-start pb-6 border-b">
                                 <div>
                                     <h1 class="text-4xl font-bold text-gray-800">חשבונית עסקה</h1>
-                                    <p class="text-gray-500">מספר: ${invoice.number}</p>
-                                    <p class="text-gray-500">תאריך: ${new Date(invoice.date).toLocaleDateString('he-IL')}</p>
+                                    <p class="text-gray-500"><span class="font-semibold">מספר:</span> ${invoice.number}</p>
+                                    <p class="text-gray-500"><span class="font-semibold">תאריך:</span> ${new Date(invoice.date).toLocaleDateString('he-IL')}</p>
                                 </div>
                                 <div class="text-right">
                                     <h2 class="text-xl font-bold">${sellerInfo.name}</h2>
                                     <p>${sellerInfo.address}</p>
-                                    <p>${sellerInfo.phone}</p>
-                                    <p>${sellerInfo.email}</p>
+                                    <p><span class="font-semibold">טלפון:</span> ${sellerInfo.phone}</p>
+                                    <p><span class="font-semibold">אימייל:</span> ${sellerInfo.email}</p>
                                     <p class="font-semibold">מספר עוסק: ${sellerInfo.businessNumber}</p>
                                 </div>
                             </header>
                             <section class="my-8">
                                 <h3 class="text-md font-semibold text-gray-500 mb-2">לכבוד:</h3>
                                 <p class="text-xl font-bold">${invoice.clientName}</p>
-                                <p class="text-gray-600">${invoice.clientAddress || ''}</p>
+                                ${clientAddressHtml}
                             </section>
                             <section>
                                 <table class="w-full text-right">
