--- a/hesh/index.html
+++ b/hesh/index.html
@@ -439,7 +439,7 @@
 
             // --- Print Logic ---
             function generatePrintContent(invoice) {
-                 const sellerInfo = invoice.sellerInfo; // Use seller info from the invoice itself
+                const sellerInfo = JSON.parse(localStorage.getItem(SELLER_INFO_KEY)) || DEFAULT_SELLER_INFO;
 
                  const itemsHtml = invoice.items.map(item => `
                     <tr class="border-b">
@@ -455,16 +455,11 @@
                     : '';
 
                 const clientAddressHtml = invoice.clientAddress ? `<p class="text-gray-600">${invoice.clientAddress}</p>` : '';
-                
-                const paymentDetailsHtml = invoice.paymentDetails ? `<p class="text-sm text-gray-500">${invoice.paymentDetails}</p>` : '';
-
-                const notesHtml = invoice.notes ? `<div class="mt-4"><h4 class="font-semibold">הערות:</h4><p class="text-sm text-gray-600">${invoice.notes.replace(/\n/g, '<br>')}</p></div>` : '';
-
 
                 return `
                     <html lang="he" dir="rtl">
                     <head>
-                        <title>חשבונית מס #${invoice.number}</title>
+                        <title>חשבונית עסקה #${invoice.number}</title>
                         <script src="https://cdn.tailwindcss.com"><\/script>
                         <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;700&display=swap" rel="stylesheet">
                         <style>
@@ -481,20 +476,16 @@
                             ${canceledWatermark}
                             <header class="flex justify-between items-start pb-6 border-b">
                                 <div>
-                                    <h1 class="text-4xl font-bold text-gray-800">חשבונית מס</h1>
-                                    <p class="text-xs text-gray-500">העתק נאמן למקור</p>
-                                    <p class="text-gray-500 mt-2"><span class="font-semibold">מספר:</span> ${invoice.number}</p>
+                                    <h1 class="text-4xl font-bold text-gray-800">חשבונית עסקה</h1>
+                                    <p class="text-gray-500"><span class="font-semibold">מספר:</span> ${invoice.number}</p>
                                     <p class="text-gray-500"><span class="font-semibold">תאריך:</span> ${new Date(invoice.date).toLocaleDateString('he-IL')}</p>
                                 </div>
-                                <div class="text-right flex items-center gap-4">
-                                    <div class="flex-grow">
-                                        <h2 class="text-xl font-bold">${sellerInfo.name}</h2>
-                                        <p>${sellerInfo.address}</p>
-                                        <p><span class="font-semibold">טלפון:</span> ${sellerInfo.phone}</p>
-                                        <p><span class="font-semibold">אימייל:</span> ${sellerInfo.email}</p>
-                                        <p class="font-semibold">מספר עוסק: ${sellerInfo.businessNumber}</p>
-                                    </div>
-                                    <img src="images/logo.gif" alt="לוגו" class="h-20 w-20 object-contain">
+                                <div class="text-right">
+                                    <h2 class="text-xl font-bold">${sellerInfo.name}</h2>
+                                    <p>${sellerInfo.address}</p>
+                                    <p><span class="font-semibold">טלפון:</span> ${sellerInfo.phone}</p>
+                                    <p><span class="font-semibold">אימייל:</span> ${sellerInfo.email}</p>
+                                    <p class="font-semibold">מספר עוסק: ${sellerInfo.businessNumber}</p>
                                 </div>
                             </header>
                             <section class="my-8">
@@ -521,8 +512,6 @@
                                 <div>
                                     <h4 class="font-semibold">אמצעי תשלום:</h4>
                                     <p>${invoice.paymentMethod}</p>
-                                    ${paymentDetailsHtml}
-                                    ${notesHtml}
                                 </div>
                                 <div class="w-1/3">
                                     <div class="flex justify-between text-xl font-bold">
@@ -536,6 +525,7 @@
                     </html>
                 `;
             }
+
 
             // --- Main Event Listeners ---
             addItemBtn.addEventListener('click', () => createItemRow());
@@ -626,3 +616,4 @@
     </script>
 </body>
 </html>
+
